# Peariscope

./: .gitignore  LICENSE  README.md  TODO.md  appcast.xml  package-lock.json
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: worklet.bundle
apple/: Package.resolved  Package.swift  project.yml
apple/Frameworks/BareKit.xcframework/: Info.plist
apple/Frameworks/bare-buffer.3.5.0.xcframework/: Info.plist
apple/Frameworks/bare-buffer.3.5.0.xcframework/_CodeSignature/: CodeDirectory
apple/Frameworks/bare-fs.4.5.5.xcframework/: Info.plist
apple/Frameworks/bare-fs.4.5.5.xcframework/_CodeSignature/: CodeDirectory
apple/Frameworks/bare-module-lexer.1.4.7.xcframework/: Info.plist
apple/Frameworks/bare-module-lexer.1.4.7.xcframework/_CodeSignature/: CodeResources
apple/Frameworks/bare-os.3.7.1.xcframework/_CodeSignature/: CodeResources
apple/Frameworks/bare-pipe.4.1.3.xcframework/: Info.plist
apple/Frameworks/bare-pipe.4.1.3.xcframework/_CodeSignature/: CodeDirectory  CodeResources
apple/Frameworks/bare-structured-clone.1.5.2.xcframework/_CodeSignature/: CodeDirectory
apple/Frameworks/bare-subprocess.5.2.2.xcframework/_CodeSignature/: CodeDirectory
apple/Frameworks/bare-type.1.1.0.xcframework/: Info.plist
apple/Frameworks/bare-type.1.1.0.xcframework/_CodeSignature/: CodeDirectory  CodeResources
apple/Frameworks/bare-url.2.3.2.xcframework/: Info.plist
apple/Frameworks/bare-url.2.3.2.xcframework/_CodeSignature/: CodeResources
apple/Peariscope.xcodeproj/: project.pbxproj
apple/Resources/: IOS-Info.plist  MacOS-Info.plist
apple/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
apple/Resources/Assets.xcassets/BerriscopeIcon.appiconset/: Contents.json
apple/Resources/Assets.xcassets/GrapeLogo.imageset/: Contents.json
apple/Resources/Assets.xcassets/GrapePurple.colorset/: Contents.json
apple/Resources/Assets.xcassets/PearLogo.imageset/: Contents.json
apple/Sources/PeariscopeCore/: BIP39Wordlist.swift  ThemeManager.swift
apple/Sources/PeariscopeCore/Audio/: AudioEncoder.swift  AudioPlayer.swift
apple/Sources/PeariscopeCore/Auth/: KeyManager.swift  QRPairing.swift
apple/Sources/PeariscopeCore/Clipboard/: ClipboardSharing.swift
apple/Sources/PeariscopeCore/Input/: InputProtocol.swift  VirtualKeycodes.swift
apple/Sources/PeariscopeCore/Models/: messages.pb.swift
apple/Sources/PeariscopeCore/Networking/: BareWorkletBridge.swift  IpcClient.swift  LocalDiscovery.swift  NetworkManager.swift  PearProcess.swift  ReconnectionManager.swift
apple/Sources/PeariscopeCore/Utilities/: PeerFingerprint.swift
apple/Sources/PeariscopeIOS/: ConnectView.swift  CrashLog.swift  PeariscopeApp.swift  SettingsView.swift  Theme.swift  ViewerSession.swift  ViewerView.swift
apple/Sources/PeariscopeMac/: AppDelegate.swift  HostView.swift  IdleView.swift  PeariscopeApp.swift  PinApprovalPanel.swift  PopoverContentView.swift  SettingsView.swift  Theme.swift  ViewerView.swift
docs/: help.html
linux/: BUILD.md  CLAUDE.md  CMakeLists.txt  build-appimage.sh  peariscope.desktop  setup.sh
linux/src/: main.cpp
linux/src/app/: AppController.cpp  AppController.h  AvahiAdvertiser.cpp  AvahiAdvertiser.h  CrashLog.cpp  CrashLog.h  NativeUpdater.cpp  NativeUpdater.h  NetworkMonitor.cpp  NetworkMonitor.h  QrCode.cpp  QrCode.h  RecentConnectionsModel.h  SleepWakeMonitor.cpp  SleepWakeMonitor.h
linux/src/audio/: FfmpegAudioDecoder.cpp  FfmpegAudioDecoder.h  FfmpegAudioEncoder.cpp  FfmpegAudioEncoder.h  PwAudioCapture.cpp  PwAudioCapture.h  PwAudioPlayer.cpp  PwAudioPlayer.h
linux/src/auth/: KeyManager.cpp  KeyManager.h
linux/src/capture/: PipewireCapture.cpp  PipewireCapture.h
linux/src/input/: X11InputCapture.cpp  X11InputCapture.h  X11InputInjector.cpp  X11InputInjector.h
linux/src/networking/: IpcBridge.cpp  IpcBridge.h
linux/src/qml/: ConnectPage.qml  HostPage.qml  Main.qml  SettingsPage.qml
linux/src/qml/components/: Header.qml  PearBadge.qml  PearButton.qml  PearCard.qml  PearToggle.qml  PeerConnectingCard.qml  RecentConnectionRow.qml  SettingsRow.qml  StatBox.qml  Theme.qml  Toolbar.qml
linux/src/video/: FfmpegDecoder.cpp  FfmpegDecoder.h  FfmpegEncoder.cpp  FfmpegEncoder.h  GlRenderer.cpp  GlRenderer.h
pear/: index.js  package-lock.json  package.json  publish-worklet.js  worklet-ios.bundle  worklet.js
pear/addons-darwin/bare-buffer.3.5.0.framework/: bare-buffer.3.5.0
pear/addons-darwin/bare-fs.4.5.5.framework/: bare-fs.4.5.5
pear/addons-darwin/bare-lief.0.1.5.framework/: bare-lief.0.1.5
pear/addons-darwin/bare-module-lexer.1.4.7.framework/: bare-module-lexer.1.4.7
pear/addons-darwin/bare-os.3.7.1.framework/: bare-os.3.7.1
pear/addons-darwin/bare-pipe.4.1.3.framework/: bare-pipe.4.1.3
pear/addons-darwin/bare-structured-clone.1.5.2.framework/: bare-structured-clone.1.5.2
pear/addons-darwin/bare-subprocess.5.2.2.framework/: bare-subprocess.5.2.2
pear/addons-darwin/bare-type.1.1.0.framework/: bare-type.1.1.0
pear/addons/bare-os.3.7.1.xcframework/: Info.plist
pear/addons/bare-structured-clone.1.5.2.xcframework/: Info.plist
pear/addons/bare-subprocess.5.2.2.xcframework/: Info.plist
pear/addons/sodium-native.5.0.10.xcframework/: Info.plist
pear/addons/udx-native.1.19.2.xcframework/: Info.plist
pear/lib/: bip39-words.js  discovery.js  ipc.js  stream-mux.js  stream.js
protocol/: messages.proto
scripts/: bump-version.sh  release-all.sh  release-android.sh  release-ios.sh  release-mac.sh
windows/: BUILD.md  CMakeLists.txt
windows/src/: main.cpp
windows/src/app/: App.cpp  App.h  HostWindow.cpp  HostWindow.h  ViewerWindow.cpp  ViewerWindow.h
windows/src/auth/: KeyManager.cpp  KeyManager.h
windows/src/capture/: DxgiCapture.cpp  DxgiCapture.h
windows/src/input/: InputCapture.cpp  InputCapture.h  InputInjector.cpp  InputInjector.h
windows/src/networking/: IpcBridge.cpp  IpcBridge.h
windows/src/video/: D3DRenderer.cpp  D3DRenderer.h  MfDecoder.cpp  MfDecoder.h  MfEncoder.cpp  MfEncoder.h
(+134 files in other folders)
